--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <li class="card">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
+
             <li class="card">
                 <i class="fa fa-cube"></i>
             </li>
@@ -90,13 +91,11 @@
     <div class="modal_background hide">
         <div class="modal_body">
             <div class="modal_heading">
-<<<<<<< HEAD
-                <h1 class="modal_title">Game Over!</h1>
+
+
+                <h1 class="modal_title">Game OVER!</h1>
                 <!--span class="modal_cancel">&times;</span>-->
-=======
-                <h1 class="modal_title">Stats</h1>
-                <span class="modal_cancel">&times;</span>
->>>>>>> 3bb29db98d03d64c78c336732c78102a9efa92af
+
             </div>
             <div class="modal_stats">
                 <p>Time = <span class="modal_time"></span></p>
@@ -104,13 +103,11 @@
                 <p>Moves = <span class="modal_moves"></span></p>
             </div>
             <div class="modal_buttons">
-<<<<<<< HEAD
+
                 <button class="modal_cancel">Cancel</button>
                 <button class="modal_replay">Replay</button>
-=======
-                <button class="modal_button modal_cancel">Cancel</button>
-                <button class="modal_button modal_replay">Replay</button>
->>>>>>> 3bb29db98d03d64c78c336732c78102a9efa92af
+
+
             </div>
         </div>
     </div>
