--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
 
         <ul class="deck">
-            <!--li class="card">
+            <li class="card">
                 <i class="fa fa-diamond"></i>
             </li>
             <li class="card">
@@ -82,7 +82,7 @@
 
             <li class="card">
                 <i class="fa fa-cube"></i>
-            </li>-->
+            </li>
         </ul>
     </div>
 
