--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
     <div class="container">
         <header>
-            <h1>Memory&nbsp;Matching Game</h1>
-            <h2>Front-End Web Development | Project&nbsp;2</h2>            
+            <h1>Memory&nbsp;Game</h1>            
         </header>
 
         <section class="score-panel">
@@ -26,7 +25,7 @@
 
             <span class="moves">0</span> Moves            
             <span class="clock">0:00</span>
-            
+
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
@@ -88,7 +87,7 @@
     <div class="modal_background hide">
         <div class="modal_body">
             <div class="modal_heading">
-                <h1 class="modal_title">Game OVER!</h1>
+                <h2 class="modal_title">Game OVER!</h2>
             </div>
             <div class="modal_stats">
                 <p>Time = <span class="modal_time"></span></p>
