--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span class="clock">0:00</span>
 
             <div class="restart">
-        		<i class="fa fa-repeat"></i>
+                <i class="fa fa-repeat"></i>
         	</div>
         </section>
 
@@ -87,7 +87,7 @@
     <div class="modal_background hide">
         <div class="modal_body">
             <div class="modal_heading">
-                <h2 class="modal_title">Game OVER!</h2>
+                <h2>Game OVER!</h2>
             </div>
             <div class="modal_stats">
                 <p>Time = <span class="modal_time"></span></p>
