--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <span class="clock">0:00</span>
 
             <div class="restart">
-                <i class="fa fa-repeat"></i>
-        	</div>
+                    <i class="fa fa-repeat"></i>    
+            </div>
         </section>
 
         <ul class="deck">
@@ -87,7 +87,7 @@
     <div class="modal_background hide">
         <div class="modal_body">
             <div class="modal_heading">
-                <h2>Game OVER!</h2>
+                <div class="modal_title">Game OVER!</div>
             </div>
             <div class="modal_stats">
                 <p>Time = <span class="modal_time"></span></p>
@@ -96,7 +96,8 @@
             </div>
             <div class="modal_buttons">
                 <button class="modal_cancel">Cancel</button>
-                <button class="modal_replay">Replay</button>
+                <!--button class="modal_replay">Replay</button>-->
+                <button class="restart">Replay</button>
             </div>
         </div>
     </div>
