--- a/popup.html
+++ b/popup.html
@@ -1,51 +1,32 @@
 <style>
 
 .popup--centered_overlay {
-
     text-align: center;
-
     position: fixed;
-
     height: 100%;
-
     width: 100%;
-
     top: 0;
-
     left: 0;
-
     background: rgba(0,0,0,.2);
-
   }
 
   .popup--centered_overlay::before {
-
     content: '';
-
     display: inline-block;
-
     height: 100%;
-
     vertical-align: middle;
-
   }
 
   .popup--centered {
-
     display: inline-block;
-
     vertical-align: middle;
-
     position: relative;
-
-    text-align: left;
-
   }
 
 </style>
 
 <div class="popup--centered_overlay">
 
-    <div class="popup--centered">Блок по центру страницы</div>
+    <div class="popup--centered">1234<br>ddd<br>ccc</div>
 
 </div>
