--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
             </div>
             <div class="modal_buttons">
                 <button class="modal_cancel">Cancel</button>
-                <!--button class="modal_replay">Replay</button>-->
-                <button class="restart">Replay</button>
+                <button class="modal_replay">Replay</button>
             </div>
         </div>
     </div>
