My Udacity project 2

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="modal_background hide">
         <div class="modal_body">
             <div class="modal_heading">
-                <div class="modal_title">Game OVER!</div>
+                <div class="modal_title">Game&nbsp;OVER!</div>
             </div>
             <div class="modal_stats">
                 <p>Time = <span class="modal_time"></span></p>
