https://github.com/TatianaWeb/Memory_Game.git

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             </div>
         </section>
 
-        <ul class="deck">            
+        <ul class="deck">
+            <!--loading by script-->            
         </ul>
     </div>
 
